ghc-4335c07/testsuite/tests/parser/should_fail/T5425.hs

-- load into ghci

"λa: (Type[0] → (Type[0] → Type[0])).\
 λb: (Type[0] → Type[0]). λc: Type[0].\
   ((a c)(b c))"
